RESOLVED FIXED160386
[Cocoa] Freeze Objective-C bindings and stop autogenerating them: Step 1 - Convert a single file
https://bugs.webkit.org/show_bug.cgi?id=160386
Summary [Cocoa] Freeze Objective-C bindings and stop autogenerating them: Step 1 - Co...
Darin Adler
Reported 2016-07-30 18:00:52 PDT
Freeze Objective-C bindings and stop autogenerating them: Step 1 - Convert a single file
Attachments
Patch (42.42 KB, patch)
2016-07-30 18:10 PDT, Darin Adler
no flags
Patch (42.45 KB, patch)
2016-07-31 09:41 PDT, Darin Adler
no flags
Patch (42.51 KB, patch)
2016-07-31 16:23 PDT, Darin Adler
no flags
Darin Adler
Comment 1 2016-07-30 18:10:40 PDT
Darin Adler
Comment 2 2016-07-30 18:11:11 PDT
Since this is the first file, I am interested in comments on the strategy too, not just this file. I may replicate what I did here for many other files!
Anders Carlsson
Comment 3 2016-07-31 08:52:01 PDT
I think we should move them to WebKit at the same time.
Darin Adler
Comment 4 2016-07-31 09:38:36 PDT
(In reply to comment #3) > I think we should move them to WebKit at the same time. I tried that at first and it was not practical because of the way everything includes everything else. Seriously it was a *lot* more work and I never got it working.
Darin Adler
Comment 5 2016-07-31 09:40:37 PDT
I think it will be easy to move all these files at once from WebCore to WebKit, but hard to move them one at a time.
Darin Adler
Comment 6 2016-07-31 09:41:16 PDT
Darin Adler
Comment 7 2016-07-31 16:23:28 PDT
Anders Carlsson
Comment 8 2016-08-01 07:18:50 PDT
(In reply to comment #5) > I think it will be easy to move all these files at once from WebCore to > WebKit, but hard to move them one at a time. Ah, that makes sense.
WebKit Commit Bot
Comment 9 2016-08-01 10:51:08 PDT
Comment on attachment 284972 [details] Patch Clearing flags on attachment: 284972 Committed r203974: <http://trac.webkit.org/changeset/203974>
WebKit Commit Bot
Comment 10 2016-08-01 10:51:14 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.