[Cocoa] Freeze Objective-C bindings and stop autogenerating them: Step 1 - Convert a single file https://bugs.webkit.org/show_bug.cgi?id=160386

Reviewed by Anders Carlsson.

No behavior change, no tests changed. I tested this locally by putting "#error" into the
files in the DerivedSources directory to make sure the build doesn't use those files even
if there are stale copies still sitting there.

Moving the bindings from WebCore to the legacy part of WebKit is something we also want to
do, but that is quite challenging to do one file at a time, so we will do that later.

For this first file, I did some hand edits to make the code in a the file a little less
peculiar. It's still awkward to have all those JSMainThreadNullState in there; should double
check that we really need them.

An important follow up step will be to cut down on the bindings. We have lots of bindings
that are only in the Private.h header, and it would be good to find a way to cut down on those.
And on iOS we would like eliminate these bindings entirely since they are not API there.

* DerivedSources.make: Moved HTMLTextAreaElement from a list we use for both JavaScript and
Objective-C DOM bindings to a list we use only for JavaScript bindings.
* WebCore.xcodeproj/project.pbxproj: Removed references to generated DOMHTMLTextAreaElement
files and instead reference the checked-in copies.
* bindings/objc/DOMHTMLTextAreaElement.h: Added.
* bindings/objc/DOMHTMLTextAreaElement.mm: Added.
* bindings/objc/DOMHTMLTextAreaElementInternal.h: Added.
* bindings/objc/DOMHTMLTextAreaElementPrivate.h: Added.


Canonical link: https://commits.webkit.org/178546@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@203974 268f45cc-cd09-0410-ab3c-d52691b4dbfc